[package]
name = "tincre-logger"
version = "0.1.1"
edition = "2021"
authors = [
  "Jason R. Stevens, CFA <jason@thinkjrs.dev>",
  "Tincre <hi@tincre.com>",
]
license = "MIT"
description = "A simple, 'zero-setup' logging library for Rust that works out-of-the-box with a familiar API. Powered by tracing."
repository = "https://github.com/Tincre/tincre-logger"
homepage = "https://github.com/Tincre/tincre-logger"
documentation = "https://docs.rs/tincre-logger"
readme = "README.md"
keywords = ["log", "logging", "logger", "tracing", "console"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::debugging",
]
exclude = [
  ".github",
  ".gitignore",
  "tests/",
  "examples/",
  ".vscode/",
  ".idea/",
  ".github",
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
assert_cmd = "2.0"
predicates = "3.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }
